--- a/.github/workflows/pr-docs.yml
+++ b/.github/workflows/pr-docs.yml
@@ -15,7 +15,7 @@ on:
 jobs:
   deploy-docs-preview:
     runs-on: ubuntu-latest
-    if: secrets
+    if: secrets.ACTIONS_TOKEN
 
     steps:
       - name: Fetch merge branch
