Give generate PR docs action contents perms

--- a/.github/workflows/pr-docs.yml
+++ b/.github/workflows/pr-docs.yml
@@ -12,6 +12,9 @@ on:
       - synchronize
       - closed
 
+permissions:
+  contents: write
+
 jobs:
   deploy-docs-preview:
     runs-on: ubuntu-latest
