--- a/.github/workflows/checks.yml
+++ b/.github/workflows/checks.yml
@@ -6,9 +6,11 @@ concurrency:
 
 on:
   push:
-    branches: [ master ]
+    branches:
+      - master
   pull_request:
-    branches: [ master ]
+    branches:
+      - master
   schedule:
     - cron: "0 12 * * 6"
   workflow_dispatch:
@@ -43,17 +45,23 @@ jobs:
         run: python -m nox -s spell-check
 
       - name: Run type checker
-        run: python -m nox -s type-check -- --force-env
+        run: python -m nox -s type-check
 
       - name: Run verify types
-        run: python -m nox -s verify-types -- --force-env
+        run: python -m nox -s verify-types
 
   test:
     strategy:
       fail-fast: false
       matrix:
-        os: [ubuntu-latest, macos-latest, windows-latest]
-        python-version: [3.9, "3.10.5", 3.11]
+        os:
+          - ubuntu-latest
+          - macos-latest
+          - windows-latest
+        python-version:
+          - 3.9
+          - "3.10.5"
+          - 3.11
 
     runs-on: ${{ matrix.os }}
 
