--- a/.github/workflows/verify-frozen-deps.yml
+++ b/.github/workflows/verify-frozen-deps.yml
@@ -1,4 +1,7 @@
-name: Reformat PR code
+# This is run to avoid an edge case where the latest version of a (probably sub)
+# dependency being yanked leads to pip failing to backtrack the dep.
+# This happened with `cachecontrol==0.12.12 ; python_version >= "3.7" and python_version < "4.0"`.
+name: Verify frozen dev deps
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
@@ -8,9 +11,11 @@ on:
   pull_request:
     branches:
       - master
+    paths:
+      - "dev-requirements/*.txt"
 
 jobs:
-  reformat:
+  verify-pr-dep-changes:
     runs-on: ubuntu-latest
 
     steps:
@@ -19,6 +24,14 @@ jobs:
           repository: ${{ github.event.pull_request.head.repo.full_name }}
           ref: ${{ github.event.pull_request.head.ref }}
           token: ${{ secrets.ACTIONS_TOKEN || secrets.GITHUB_TOKEN }}
+
+      - uses: dorny/paths-filter@v2
+        id: changes
+        with:
+          filters: |
+            ini_files:
+              - "dev-requirements/*.txt"
+          list-files: escape
 
       - name: Set up Python 3.9
         uses: actions/setup-python@v4
@@ -30,10 +43,5 @@ jobs:
           python -m pip install --upgrade pip wheel
           python -m pip install -r ./dev-requirements/nox.txt
 
-      - name: Reformat code
-        run: python -m nox -s reformat
-
-      - name: Add & Commit
-        uses: EndBug/add-and-commit@v9.1.1
-        with:
-          message: "Reformat code"
+      - name: Verify dev dependencies
+        run: python -m nox -s verify-dev-deps -- ${{ steps.changes.outputs.ini_files_files}}
