--- a/.github/workflows/freeze-for-pr.yml
+++ b/.github/workflows/freeze-for-pr.yml
@@ -12,6 +12,9 @@ on:
       - "dev-requirements/*.in"
       - "!dev-requirements/constraints.in"
 
+permissions:
+  pull-requests: write
+
 jobs:
   freeze-pr-dep-changes:
     runs-on: ubuntu-latest
