Switch to getting nox sessions and actions from Piped

--- a/dev-requirements/type-checking.in
+++ b/dev-requirements/type-checking.in
@@ -1,2 +1,4 @@
-mypy==0.991
-pyright==1.1.282
+-r ./tests.in
+-r ../piped/python/base-requirements/nox.in
+-r ../piped/python/base-requirements/type-checking.in
+-r ./constraints.in
