--- a/pyproject.toml
+++ b/pyproject.toml
@@ -144,6 +144,38 @@ warn_redundant_casts = false
 allow_redefinition = true
 disable_error_code = ["type-abstract"]
 
+[tool.piped]
+default_sessions = [
+    "reformat",
+    "verify-markup",
+    "flake8",
+    "spell-check",
+    "slot-check",
+    "type-check",
+    "test",
+    "verify-types",
+]
+extra_test_installs = ["."]
+project_name = "tanchan"
+top_level_targets = ["./tanchan", "./tests"]
+
+[tool.piped.github_actions.freeze_for_pr]
+[tool.piped.github_actions.lint]
+[tool.piped.github_actions.pr_docs]
+[tool.piped.github_actions.publish]
+[tool.piped.github_actions.py_lint]
+[tool.piped.github_actions.py_test]
+codeclimate_token = "4bf1f4002804f947bebae669d631cad28e39b6516f6c3d4ead820c07949e57d1"
+python_versions = "[3.9, 3.10.5, 3.11]"
+
+[tool.piped.github_actions.reformat]
+[tool.piped.github_actions.release_docs]
+[tool.piped.github_actions.resync_piped]
+[tool.piped.github_actions.type_check]
+[tool.piped.github_actions.upgrade_dev_deps]
+[tool.piped.github_actions.verify_frozen_deps]
+[tool.piped.github_actions.verify_types]
+
 [tool.slotscheck]
 strict-imports = true
 require-superclass = true
