--- a/pyproject.toml
+++ b/pyproject.toml
@@ -96,7 +96,7 @@ ignore = [
     "E231",    # missing whitespace after ','
 ]
 per-file-ignores = [
-    "noxfile.py: D100, D101, D103, INP001",
+    "noxfile.py: D100, FA101, F401, F403, INP001",
     "tanchan/py.typed: D100",
     "tests/*.py: CCE002, D100, D101, D103, D104, FA100, FA101",
     "tests/test_doc_parse.py: D100, D101, D103, D104, D400, D403, D406, D407, D410, D411, FA100, FA101",
@@ -105,6 +105,55 @@ per-file-ignores = [
 [tool.isort]
 profile = "black"
 force_single_line = true
+
+[tool.mypy]
+# some good strict settings
+python_version = 3.9
+strict = true
+warn_unreachable = true
+
+# more narrow type ignores
+show_error_codes = true
+
+# these are used by pyright
+warn_unused_ignores = false
+warn_redundant_casts = false
+
+# compatibility with pyright
+allow_redefinition = true
+disable_error_code = ["type-abstract"]
+
+[tool.piped]
+default_sessions = [
+    "reformat",
+    "verify-markup",
+    "flake8",
+    "spell-check",
+    "slot-check",
+    "type-check",
+    "test",
+    "verify-types",
+]
+extra_test_installs = ["."]
+mypy_targets = ["./tanchan"]
+project_name = "tanchan"
+top_level_targets = ["./noxfile.py", "./tanchan", "./tests"]
+
+[tool.piped.github_actions.freeze_for_pr]
+[tool.piped.github_actions.lint]
+[tool.piped.github_actions.pr_docs]
+[tool.piped.github_actions.publish]
+[tool.piped.github_actions.py_test]
+codeclimate_token = "4bf1f4002804f947bebae669d631cad28e39b6516f6c3d4ead820c07949e57d1"
+python_versions = "[3.9, 3.10.5, 3.11]"
+
+[tool.piped.github_actions.reformat]
+[tool.piped.github_actions.release_docs]
+[tool.piped.github_actions.resync_piped]
+[tool.piped.github_actions.type_check]
+[tool.piped.github_actions.upgrade_locks]
+[tool.piped.github_actions.verify_locks]
+[tool.piped.github_actions.verify_types]
 
 [tool.pyright]
 include = ["tanchan", "noxfile.py", "tests"]
@@ -126,23 +175,6 @@ reportUnknownVariableType = "warning"           # Lotta false-positives, might f
 asyncio_mode = "strict"
 testpaths = ["tests"]
 required_plugins = ["pytest-asyncio", "pytest-timeout"]
-
-[tool.mypy]
-# some good strict settings
-python_version = 3.9
-strict = true
-warn_unreachable = true
-
-# more narrow type ignores
-show_error_codes = true
-
-# these are used by pyright
-warn_unused_ignores = false
-warn_redundant_casts = false
-
-# compatibility with pyright
-allow_redefinition = true
-disable_error_code = ["type-abstract"]
 
 [tool.slotscheck]
 strict-imports = true
