--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-dependencies = ["hikari-tanjun~=2.10.1a1"]
+dependencies = ["hikari-tanjun>=2.10.1a1, <3"]
 dynamic = ["description"]
 
 [project.urls]
