--- a/pyproject.toml
+++ b/pyproject.toml
@@ -175,7 +175,7 @@ reportUnknownVariableType = "warning"           # Lotta false-positives, might f
 [tool.pytest.ini_options]
 asyncio_mode = "strict"
 testpaths = ["tests"]
-required_plugins = ["pytest-asyncio", "pytest-timeout"]
+required_plugins = []
 
 [tool.slotscheck]
 strict-imports = true
