--- a/dev-requirements/tests.in
+++ b/dev-requirements/tests.in
@@ -1,9 +1,3 @@
 -r ../piped/python/base-requirements/tests.in
 
-freezegun==1.2.2
-pytest==7.2.0
-pytest-asyncio==0.20.2
-pytest-cov==4.0.0
-pytest-timeout==2.1.0
-pytest-xdist==3.1.0
-typing-extensions==4.4.0
+pytest-xdist>=3.1, <4
