Allow MyPy to fail

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -135,6 +135,7 @@ default_sessions = [
     "verify-types",
 ]
 extra_test_installs = ["."]
+mypy_allowed_to_fail = true
 mypy_targets = ["./tanchan"]
 project_name = "tanchan"
 top_level_targets = ["./noxfile.py", "./tanchan", "./tests"]
