--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-dependencies = ["hikari-tanjun>=2.11.3, <3", "typing-extensions>=4.5.0"]
+dependencies = ["hikari-tanjun>=2.11.3, <3", "typing-extensions>=4.5, <5"]
 dynamic = ["description"]
 
 [project.urls]
