--- a/pyproject.toml
+++ b/pyproject.toml
@@ -197,6 +197,7 @@ reportUnknownVariableType = "warning"           # Lotta false-positives, might f
 [tool.pytest.ini_options]
 testpaths = ["tests"]
 required_plugins = []
+filterwarnings = ["error::DeprecationWarning"]
 
 [tool.slotscheck]
 strict-imports = true
