--- a/pyproject.toml
+++ b/pyproject.toml
@@ -99,7 +99,7 @@ ignore = [
     "E231",    # missing whitespace after ','
 ]
 per-file-ignores = [
-    "docs_src/*.py: A001, D100, D103, D407, FA101, F841, INP001, TC002, TYP006",
+    "docs_src/*.py: A001, D100, D103, D407, FA100, FA101, F841, INP001, TC002, TYP006",
     "noxfile.py: D100, FA101, F401, F403, INP001",
     "tanchan/py.typed: D100",
     "tests/*.py: CCE002, D100, D101, D103, D104, FA100, FA101",
