--- a/pyproject.toml
+++ b/pyproject.toml
@@ -196,6 +196,7 @@ reportUnknownVariableType = "warning"           # Lotta false-positives, might f
 
 [tool.pytest.ini_options]
 testpaths = ["tests"]
+timeout = 15
 required_plugins = []
 filterwarnings = ["error"]
 
