--- a/pyproject.toml
+++ b/pyproject.toml
@@ -29,6 +29,9 @@ classifiers = [
 dependencies = ["hikari-tanjun>=2.16, <3", "typing-extensions>=4.5, <5"]
 dynamic = ["description"]
 
+[project.optional-dependencies]
+yuyo = ["hikari-yuyo>=1.17.0, <2"]
+
 [project.urls]
 Homepage = "https://github.com/FasterSpeeding/Tan-chan"
 Repository = "https://github.com/FasterSpeeding/Tan-chan"
