--- a/pyproject.toml
+++ b/pyproject.toml
@@ -6,7 +6,7 @@ build-backend = "flit_core.buildapi"
 name = "tanchan"
 version = "0.4.0"
 readme = "README.md"
-requires-python = ">=3.9.0,<3.12"
+requires-python = ">=3.9.0,<3.13"
 license = {file = "LICENSE"}
 authors = [ {name = "Faster Speeding", email="lucina@lmbyrne.dev"} ]
 keywords = ["hikari"]
@@ -159,7 +159,7 @@ top_level_targets = ["./docs_src", "./noxfile.py", "./tanchan", "./tests"]
 [tool.piped.github_actions.publish]
 [tool.piped.github_actions.py_test]
 codeclimate_token = "4bf1f4002804f947bebae669d631cad28e39b6516f6c3d4ead820c07949e57d1"
-python_versions = ["3.9", "3.10", "3.11"]
+python_versions = ["3.9", "3.10", "3.11", "3.12"]
 
 [tool.piped.github_actions.reformat]
 [tool.piped.github_actions.release_docs]
