--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,15 +103,15 @@ ignore = [
     "E231",    # missing whitespace after ','
     "E701",    # Incompatible with black: E701 multiple statements on one line (colon)
     "E704",    # Incompatible with black: E704 multiple statements on one line (def)
-    "ASYNC910", # Return from async function with no guaranteed checkpoint or exception since function definition.
 ]
 per-file-ignores = [
-    "docs_src/*.py: A001, DALL000, D100, D103, D407, FA100, FA101, F841, INP001, TC002, TYP006",
-    "noxfile.py: D100, FA101, F401, F403, INP001",
-    "tanchan/py.typed: D100",
-    "tests/*.py: CCE002, DALL000, D100, D101, D103, D104, FA100, FA101",
-    "tests/test_doc_parse.py: DALL000, D100, D101, D103, D104, D400, D403, D406, D407, D410, D411, FA100, FA101, TC101, TC002",
-    "tests/test_usage_guilde.py: CCE002, DALL000, D100, D101, D103, D104, FA100, FA101, TC002",
+    "*.py: ASYNC910", # Return from async function with no guaranteed checkpoint or exception since function definition.
+    "docs_src/*.py: ASYNC910, A001, DALL000, D100, D103, D407, FA100, FA101, F841, INP001, TC002, TYP006",
+    "noxfile.py: ASYNC910, D100, FA101, F401, F403, INP001",
+    "tanchan/py.typed: ASYNC910, D100",
+    "tests/*.py: ASYNC910, CCE002, DALL000, D100, D101, D103, D104, FA100, FA101",
+    "tests/test_doc_parse.py: ASYNC910, DALL000, D100, D101, D103, D104, D400, D403, D406, D407, D410, D411, FA100, FA101, TC101, TC002",
+    "tests/test_usage_guilde.py: ASYNC910, CCE002, DALL000, D100, D101, D103, D104, FA100, FA101, TC002",
 ]
 
 [tool.isort]
