--- a/pyproject.toml
+++ b/pyproject.toml
@@ -103,6 +103,7 @@ ignore = [
     "E231",    # missing whitespace after ','
     "E701",    # Incompatible with black: E701 multiple statements on one line (colon)
     "E704",    # Incompatible with black: E704 multiple statements on one line (def)
+    #"ASYNC910", # Return from async function with no guaranteed checkpoint or exception since function definition.
 ]
 per-file-ignores = [
     "*.py: ASYNC910", # Return from async function with no guaranteed checkpoint or exception since function definition.
