--- a/pyproject.toml
+++ b/pyproject.toml
@@ -208,7 +208,7 @@ timeout = 15
 required_plugins = []
 filterwarnings = [
     "error",
-    "ignore:Use Context or CachingContext:DeprecationWarning"
+    "ignore:Use Context or CachingContext:DeprecationWarning",
 ]
 
 [tool.slotscheck]
