--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,7 @@ build-backend = "flit_core.buildapi"
 
 [project]
 name = "tanchan"
-version = "0.4.2
+version = "0.4.2"
 readme = "README.md"
 requires-python = ">=3.9.0,<3.14"
 license = {file = "LICENSE"}
