--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,7 +26,7 @@ classifiers = [
     "Topic :: Utilities",
     "Typing :: Typed",
 ]
-dependencies = ["hikari-tanjun>=2.16, <3", "typing-extensions>=4.5, <5"]
+dependencies = ["hikari-tanjun>=2.16, <3"]
 dynamic = ["description"]
 
 [project.optional-dependencies]
