--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ type-checking = [
     "nox",
     "pyright>=1.1.285",
     {include-group = "tests"},
+    "hikari-yuyo>=1.18.0, <2",
 ]
 
 [tool.black]
@@ -239,6 +240,14 @@ ignore = [
     "PGH003",   # Use specific rule codes when ignoring type issues
     "PLR2004",  # Magic value used in comparison, consider replacing `` with a constant variable
     "SLF001",   # Private member accessed: ``
+]
+"tests/test_doc_parse.py" = [
+    "D400",  # First line should end with a period
+    "D401",  # First line of docstring should be in imperative mood: "Description."
+    "D406",  # [*] Section name should end with a newline ("Returns")
+    "D407",  # [*] Missing dashed underline after section ("Returns")
+    "D410",  # [*] Missing blank line after section ("Parameters")
+    "D411",  # [*] Missing blank line before section ("Returns")
 ]
 
 [tool.ruff.lint.mccabe]
