--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ type-checking = [
     "nox",
     "pyright>=1.1.285",
     {include-group = "tests"},
+    # From `yuyo` extra
     "hikari-yuyo>=1.18.0, <2",
 ]
 
